tests/derive_ui/struct_subcommand.stderr
error: `subcommand` is only allowed on fields
  --> tests/derive_ui/struct_subcommand.rs:12:24
   |
12 | #[clap(name = "basic", subcommand)]
   |                        ^^^^^^^^^^
